[gd_scene load_steps=4 format=3 uid="uid://bpspwacrcl3vg"]

[ext_resource type="Script" uid="uid://ure2f8i6krfo" path="res://scenes/ui/ui.gd" id="1_s64wo"]
[ext_resource type="PackedScene" uid="uid://kniluiw8wnxt" path="res://scenes/ui/SpawnMenu.tscn" id="4_j3nm3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c01mt"]
bg_color = Color(0.25490198, 0.25490198, 0.25490198, 0.49019608)

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_s64wo")

[node name="AutoPlay" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -193.0
offset_top = -100.0
offset_right = -14.0
offset_bottom = -60.0
grow_horizontal = 0
grow_vertical = 0
text = "Auto-Play"

[node name="Step" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -193.0
offset_top = -54.0
offset_right = -14.0
offset_bottom = -14.0
grow_horizontal = 0
grow_vertical = 0
text = "Prossima generazione"

[node name="Preview" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -308.0
offset_top = -54.0
offset_right = -200.0
offset_bottom = -14.0
grow_horizontal = 0
grow_vertical = 0
text = "Anteprima"

[node name="SpawnMenu" parent="." instance=ExtResource("4_j3nm3")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 141.0
offset_bottom = 90.0
theme_override_styles/panel = SubResource("StyleBoxFlat_c01mt")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Fiori:"

[node name="NumFiori" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Alberi:"

[node name="NumAlberi" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Animali:"

[node name="NumAnimali" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="DebugPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 948.0
offset_right = 1151.0
offset_bottom = 90.0
theme_override_styles/panel = SubResource("StyleBoxFlat_c01mt")

[node name="VBoxContainer" type="VBoxContainer" parent="DebugPanel"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="DebugPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Coords"

[node name="DebugCoords" type="Label" parent="DebugPanel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="DebugPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugPanel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Tipo:"

[node name="DebugTipo" type="Label" parent="DebugPanel/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="DebugPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugPanel/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Next Gen:"

[node name="DebugNextGen" type="Label" parent="DebugPanel/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
